# cactus

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md
android/: README.md  build.gradle  build.gradle.kts  consumer-rules.pro  settings.gradle.kts
android/src/main/: AndroidManifest.xml  CMakeLists.txt  jni.cpp
android/test-app/src/main/: AndroidManifest.xml
cactus/: CMakeLists.txt  README.md  cactus-bench.cpp  cactus-chat.cpp  cactus-core.cpp  cactus-embedding.cpp  cactus-generation.cpp  cactus-log.cpp  cactus-lora.cpp  cactus-tokens.cpp  cactus.cpp  cactus.h  cactus_bench.cpp  cactus_chat.cpp  cactus_completion.cpp  cactus_context.cpp  cactus_embedding.cpp  cactus_ffi.cpp  cactus_ffi.h  cactus_loader.cpp  cactus_lora.cpp  cactus_shims.h  cactus_tts.cpp  cactus_utils.cpp  clip.cpp  log.cpp  mtmd-helper.cpp  mtmd.cpp  tts.cpp
cactus-android/: build.gradle.kts  consumer-rules.pro  gradle.properties  proguard-rules.pro
cactus-android/src/main/: CMakeLists.txt  jni-helpers.cpp  jni-helpers.h
cactus-android/test-app/: build.gradle.kts
cactus-flutter/: .metadata  CHANGELOG.md  LICENSE  README.md  ffigen.yaml  pubspec.yaml
cactus-flutter/android/: build.gradle  settings.gradle
cactus-flutter/android/src/main/: AndroidManifest.xml  CMakeLists.txt
cactus-flutter/example/: README.md  pubspec.yaml
cactus-flutter/example/lib/: main.dart
cactus-flutter/ios/: CMakeLists.txt  cactus.podspec  cactus_flutter.podspec
cactus-flutter/ios/Classes/: cactus_flutter.c
cactus-flutter/lib/: cactus.dart  cactus_flutter.dart  chat.dart  completion.dart  context.dart  ffi_bindings.dart  init_params.dart  model_downloader.dart
cactus-flutter/lib/src/: ffi_bindings.dart
cactus-flutter/src/: CMakeLists.txt  cactus_flutter.c
cactus-ios/: CMakeLists.txt
cactus-ios/cactus-swift/: .gitignore  Package.swift
cactus-react/: README.md  package.json
cactus-react/ios/: Cactus.h  Cactus.mm
cactus-react/src/: NativeCactus.ts  chat.ts  index.ts  tools.ts
cactus-tests/: CMakeLists.txt  test.cpp  test_core_api.cpp  test_core_api.h  test_ffi_api.cpp  test_ffi_api.h
docs/: core.md
examples/: README.md
examples/SwiftExample/SwiftExample/: ContentView.swift  SwiftExampleApp.swift
examples/android_chat/: README.md  settings.gradle.kts
examples/android_chat/app/: build.gradle.kts
examples/android_chat/gradle/: libs.versions.toml
examples/cpp-llm/: CMakeLists.txt  build.sh  main.cpp
examples/cpp-tts/: CMakeLists.txt  build.sh  main.cpp
examples/cpp-vlm/: CMakeLists.txt  build.sh  main.cpp
examples/flutter-chat/: README.md  analysis_options.yaml  pubspec.yaml
examples/flutter-chat/android/app/src/main/cpp/: CMakeLists.txt
examples/flutter-chat/lib/: main.dart
examples/flutter-notes/: .gitignore  README.md  pubspec.yaml
examples/flutter-notes/lib/: main.dart
examples/flutter-notes/test/: widget_test.dart
examples/flutter_example/: README.md
examples/flutter_translator/: pubspec.yaml
examples/flutter_translator/lib/: inference.dart  main.dart  other.dart
examples/java-example/: README.md  build.gradle  settings.gradle
examples/java-example/app/: build.gradle
examples/kotlin-example/: README.md  build.gradle  local.properties  settings.gradle
examples/kotlin-example/app/: build.gradle
examples/react-chat/: .gitignore  app.json  babel.config.js  package.json
examples/react-chat/app/: index.tsx
examples/react-chat/components/: Header.tsx  MessageField.tsx
examples/react-chat/utils/: modelUtils.ts
examples/react-diary/: README.md  app.json  package.json
examples/react-diary/app/: _layout.tsx
examples/react-diary/utils/: functions.ts
examples/react-example/: .gitignore  package.json
examples/react-example/app/: _layout.tsx  index.tsx
examples/react-example/utils/: constants.ts  modelUtils.ts
examples/react-productivity/: .gitignore  package.json  tsconfig.json
examples/react-productivity/app/: _layout.tsx  index.tsx
examples/react-productivity/components/: ThemedText.tsx  ThemedView.tsx
examples/react-productivity/utils/: functions.ts  styles.ts  tools.ts
examples/swift-example/SwiftExample.xcodeproj/: project.pbxproj
flutter/: .gitignore  README.md  pubspec.yaml
flutter/example/: main.dart  pubspec.yaml
flutter/example/lib/: main.dart
flutter/lib/: cactus_ffi.dart  cactus_flutter.dart  main.dart
flutter/lib/src/: cactus.dart  chat.dart  grammar.dart  llama_context.dart  model_downloader.dart  types.dart
flutter_example/: pubspec.yaml
flutter_example/lib/: home_screen.dart  main.dart
flutter_example/lib/utils/: constants.dart
ios/: CMakeLists.txt
ios/Cactus.xcodeproj/: project.pbxproj
ios/CactusKit/: Package.swift  README.md  module.modulemap
ios/cactus.xcframework/: info.plist
kotlin/: README.md  build.gradle  gradle.properties  local.properties  settings.gradle
kotlin/src/main/: AndroidManifest.xml
patches/: log.cpp.patch
react/: README.md  cactus-react-native-tes.podspec  cactus-react-native-test.podspec  cactus-react-native.podspec  cactus-rn-2.podspec  cactus-rn-3.podspec  cactus-rn.podspec  package.json  tsconfig.json
react/android/: gradle.properties
react/ios/: CMakeLists.txt  CactusContext.h  CactusContext.mm
react/src/: index.ts  modelDownloader.ts
react/test-app/: metro.config.js  package.json  tsconfig.json
react/test-app/app/: index.tsx
react/test-app/components/: Message.tsx
react/test-app/utils/: modelUtils.ts
scripts/: build-android.sh  build-flutter-android.sh  build-flutter.sh  build-ios-framework.sh  build-ios.sh  build-kotlin.sh  build-mobile.sh  build-react-android.sh  build-react.sh  build-release.sh  build-swift.sh  build.sh  patch-from-llama-cpp.sh  release.sh  test-cactus.sh  test_cactus.sh
swift/: README.md
swift/CactusSwift.xcframework/: Info.plist
swift/Source/: Cactus.swift  CactusBridge.h  CactusBridge.mm  CactusSwift.swift  ChatFormatting.swift  LlamaContext.swift  ModelDownloader.swift  module.modulemap
swift/Source/CactusSwift/: CactusSwift.h
swift/Source/CactusSwift.xcodeproj/: project.pbxproj
tests/: CMakeLists.txt  test.cpp
(+121 files in other folders)
